# video-generator-schema

./: CLAUDE.md  pyproject.toml
docs/: DESIGN_VIDEO_CONTENT_CREATOR.md  GUIDE_DATA_TO_PROMPT.md  GUIDE_VOICEVOX.md
src/video_generator_schema/: __init__.py  constants.py  enums.py  input_bundle.py  schema_export.py
src/video_generator_schema/models/: __init__.py  meta.py  mouth.py  review.py
tests/: conftest.py  test_input_bundle.py  test_meta.py  test_mouth.py  test_review.py
